--- a/meu portifolio/CSS/menuMobile.css
+++ b/meu portifolio/CSS/menuMobile.css
@@ -2,37 +2,52 @@
   .menu-mobile {
     display: none;
   }
+
+  .menu-burger {
+    display: none;
+  }
+
 }
 
 @media screen and (max-width: 700px) {
   .header {
-    padding: 0;
-    display: none;
+    padding: 10px 20px;
+  }
+  
+  .menu-burger {
+    background-color: transparent;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    font-size: 1.2rem;
+    margin-left: 65%;
+  }
+
+  .menu-burger.change {
+    content: "x";
   }
 
   .links-header {
     display: none;
   }
 
-
   .menu-mobile {
+    display: none;
     background-color: #201f1f;
-    width: 90vw;
-    float: right;
+    width: 100vw;
     height: 100vh;
-    z-index: 900;
-    position: relative;
+    float: right;
   }
 
-  .menu-mobile::after {
-    content: "✕";
-    position: absolute;
-    top: 10px;
-    right: 20px;
-    font-size: 1.6rem;
-    color: #ffffff9c;
-    cursor: pointer;
+  .menu-mobile.show {
+    display: block;
+    transition: .4s ease;
   }
+
+  section.hide {
+    display: none;
+  }
+
 
   .links-header-mobile li:first-child {
     margin-top: 50px;
@@ -60,9 +75,5 @@
     margin-bottom: 60px;
     width: 80%;
     height: 1px;
-  }
-
-  section {
-    display: none;
   }
 }
