--- a/meu portifolio/CSS/geral.css
+++ b/meu portifolio/CSS/geral.css
@@ -2,7 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;;
 }
 
 a {
