--- a/meu portifolio/CSS/contents.css
+++ b/meu portifolio/CSS/contents.css
@@ -5,7 +5,6 @@
   background-image: linear-gradient(#d1d0d04e, #8d8d8d25), url('../imagens/istockphoto-1168080557-612x612.jpg');
 }
 
-
 .content-home h2{
   position: absolute;
   top: 29%;
@@ -22,8 +21,10 @@
   left: 15%;
   font-size: 22px;
   color: #333333;
-  width: 1000px;
+  width: 74.8%;
   text-align: center;
+  display: inline-block;
+  word-break: break-all;
 }
 
 .exclamation {
@@ -78,4 +79,131 @@
   position: absolute;
   top: 100%;
   left: 46.5%;
+}
+
+/* RESPONSIVE CONTENT */
+
+@media screen and (max-width: 1100px) {
+  .description p {
+    font-size: 20px;
+    width: 86%;
+  }
+
+  .content-home h2 {
+    font-size: 60px;
+  }
+
+  .btn-projects {
+    bottom: 120px;
+    left: 43%;
+    width: 200px;
+    height: 50px;
+  }
+  
+  .btn-projects a {
+   font-size: 18px;
+  }
+
+.arrow-loop {
+  position: absolute;
+  left: 49.5%;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .description p {
+    text-align: center;
+    width: 76%;
+    top: 53%;
+  }
+
+  .content-home h2 {
+    font-size: 55px;
+    margin-right: 200px;
+    top: 29%;
+    left: 27%;
+  }
+
+  .btn-projects {
+    bottom: 190px;
+    left: 424px;
+  }
+
+  .arrow-loop {
+    position: absolute;
+    top: 92%;
+    left: 498px;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .content-home h2 {
+    font-size: 45px;
+  }
+
+  .description p {
+    font-size: 18px;
+    width: 58%;
+    left: 200px;
+    top: 49%;
+  }
+
+  .btn-projects {
+    left: 390px;
+    width: 150px;
+  }
+
+  .btn-projects a{
+    font-size: 13px
+  }
+
+  .arrow-loop {
+    left: 445px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .btn-projects {
+    left: 380px;
+    width: 150px;
+  }
+  .arrow-loop {
+    left: 435px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .content-home h2 {
+    font-size: 30px;
+    left: 240px;
+  }
+
+  .description p {
+    font-size: 16px;
+    width: 51%;
+    top: 45%;
+  }
+
+  .btn-projects {
+    left: 346px;
+    width: 110px;
+    top: 65%;
+  }
+
+  .btn-projects a {
+    font-size: 14px;
+  }
+
+  .arrow-loop {
+    left: 381px;
+  }
+
+  .medias-contents img{
+    width: 25px;
+    height: 25px;
+  }
+
+  .links-medias-content {
+    padding: 4px 4px;
+  }
 }
