--- a/meu portifolio/CSS/header.css
+++ b/meu portifolio/CSS/header.css
@@ -51,3 +51,21 @@
   color: #FBD10F;
   transition: .4s ease;
 }
+
+/* RESPONSIVE HEADER */
+
+@media screen and (max-width: 800px) {
+  .links li a {
+    font-size: 14px;
+  }
+
+  .name-logo {
+    font-size: 14px;
+    top: 31px;
+  }
+
+  .logo-not-finish {
+    width: 40px;
+    height: 40px;
+  }
+}
