--- a/meu portifolio/CSS/header.css
+++ b/meu portifolio/CSS/header.css
@@ -78,19 +78,47 @@
 
 @media screen and (max-width: 640px) {
   .name-logo {
-    top: 60px;
+    top: 84px;
+    font-size: 17px;
   } 
+
+  .header {
+    align-items: center;
+  }
+
+  .logo-not-finish {
+    margin-top: 30px;
+  }
  
   .links-container-mobile {
     position: absolute;
     position: fixed;
     z-index: 1;
     right: 0;
-    top: 70px;
     width: 100%;
-    height: 250px;
+    height: 0;
     background-color: #fff;
     box-shadow: #80808056 -5px 3px 5px;
+    animation: heightNone .3s ease;
+    display: none;
+  }
+
+  .links-container-mobile.active {
+    top: 90px;
+    display: block;
+    height: 250px;
+    animation: heightAnimate .3s ease-in;
+    overflow-y: hidden;
+  }
+
+  @keyframes heightAnimate {
+    0% {
+      height: 0;
+    }
+
+    100% {
+      height: 250px;
+    }
   }
 
   .links-mobile li {
@@ -126,7 +154,9 @@
     padding: 0;
     width: 30px;
     margin-right: -20px;
+    margin-top: 20px;
   }
+
   .line {
     fill: none;
     stroke: black;
