--- a/meu portifolio/CSS/contents.css
+++ b/meu portifolio/CSS/contents.css
@@ -3,6 +3,7 @@
   width: 100vw;
   height: 112vh; 
   background-image: linear-gradient(#d1d0d04e, #8d8d8d25), url('../imagens/istockphoto-1168080557-612x612.jpg');
+  max-width: 100%;
 }
 
 .content-home h2{
@@ -110,154 +111,3 @@
   }
 }
 
-@media screen and (max-width: 1000px) {
-  .description p {
-    text-align: center;
-    width: 76%;
-    top: 53%;
-  }
-
-  .content-home h2 {
-    font-size: 55px;
-    margin-right: 200px;
-    top: 29%;
-    left: 27%;
-  }
-
-  .btn-projects {
-    bottom: 190px;
-    left: 424px;
-  }
-
-  .arrow-loop {
-    position: absolute;
-    top: 92%;
-    left: 498px;
-  }
-}
-
-@media screen and (max-width: 960px) {
-  .content-home h2 {
-    font-size: 45px;
-  }
-
-  .description p {
-    font-size: 18px;
-    width: 58%;
-    left: 200px;
-    top: 49%;
-  }
-
-  .btn-projects {
-    left: 390px;
-    width: 150px;
-  }
-
-  .btn-projects a{
-    font-size: 13px
-  }
-
-  .arrow-loop {
-    left: 445px;
-  }
-}
-
-@media screen and (max-width: 900px) {
-  .btn-projects {
-    left: 380px;
-    width: 150px;
-  }
-  .arrow-loop {
-    left: 435px;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  .content-home h2 {
-    font-size: 30px;
-    left: 240px;
-  }
-
-  .description p {
-    font-size: 16px;
-    width: 51%;
-    top: 50%;
-  }
-
-  .btn-projects {
-    left: 346px;
-    width: 110px;
-    top: 70%;
-  }
-
-  .btn-projects a {
-    font-size: 14px;
-  }
-
-  .arrow-loop {
-    left: 381px;
-  }
-
-  .medias-contents img{
-    width: 25px;
-    height: 25px;
-  }
-
-  .links-medias-content {
-    padding: 4px 4px;
-  }
-}
-
-@media screen and (max-width: 700px){
-  .links-medias-content {
-    display: none;
-  }
-  
-  .content-home h2 {
-    font-size: 40px;
-    width: 600px;
-    left: 55px;
-  }
-
-  .description p {
-    left: 184px;
-    width: 53ch;
-    font-size: 13px;
-  }
-
-  .btn-projects {
-    left: 310px;
-    top: 75%;
-  }
-
-  .arrow-loop {
-    display: none;
-  }
-}
-
-@media screen and (max-width: 640px) {
-  .content-home h2 {
-    font-size: 40px;
-    left: 10px;
-  }
-
-  .description p {
-    left: 140px;
-    top: 53%;
-  }
-
-  .btn-projects {
-    width: 100px;
-    height: 30px;
-    left: 270px;
-    top: 80%
-  }
-
-  .btn-projects a {
-    font-size: 12px;
-  }
-
-  .links-container {
-  display: none;
-  }
-}
