--- a/meu portifolio/CSS/contents.css
+++ b/meu portifolio/CSS/contents.css
@@ -79,13 +79,14 @@
 
 /* ABOUT ME */
 .aboutMe {
-  min-width: 1200px;
+  width: 100%;
   background-color: #FAFAFA;
 }
 
 .know-me-content {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  justify-content: center;
 }
 
 .aboutMe-content {
@@ -107,7 +108,7 @@
   width: 35px;
   height: 6px;
   border-radius: 10px;
-  left: 685px;
+  left: 684px;
   margin-top: 30px;
   background-color: #FACF0F;
 }
@@ -116,4 +117,74 @@
   font-size: 20px;
   margin-top: 60px;
   color: #555;
+}
+
+.know-me {
+  padding: 0px 100px;
+}
+
+.know-me h3 {
+  font-size: 28px;
+  margin-bottom: 30px;
+  letter-spacing: .5px;
+}
+
+.know-me p {
+  font-size: 18px;
+  line-height: 30px;
+  width: 65ch;
+  color: #666666; 
+}
+
+.btn-contact {
+  margin-top: 30px;
+  border: none;
+  background-color: #FACF0F;
+  width: 150px;
+  height: 50px;
+  border-radius: 5px;
+  box-shadow: #00000036 1px 1px 10px;
+  margin-bottom: 100px;
+}
+.btn-contact a {
+  color: #000;
+  font-size: 16px;
+  letter-spacing: 1px;
+  font-weight: bold;
+  letter-spacing: 1px;
+} 
+
+.skills {
+  padding: 0px 100px;
+}
+
+.skills h3 {
+  font-size: 28px;
+  margin-bottom: 30px;
+  letter-spacing: .5px; 
+}
+
+.my-skills {
+  display: flex;
+}
+
+.my-skills li {
+  background-color: #cccccca6;
+  font-size: 16px;
+  font-weight: 600;
+  color: #666666;
+  padding: 10px 20px;
+  margin-right: 15px;
+  border-radius: 5px;
+}
+
+#design {
+  display: inline-block;
+  margin-top: 25px;
+  background-color: #cccccca6;
+  font-size: 16px;
+  font-weight: 600;
+  color: #666666;
+  padding: 10px 20px;
+  border-radius: 5px;
 }
