--- a/meu portifolio/CSS/project&Contact.css
+++ b/meu portifolio/CSS/project&Contact.css
@@ -1,3 +1,7 @@
+.projects{
+  margin-bottom: -150px;
+}
+
 .project-text {
   text-align: center;
   margin-top: 100px;
@@ -64,6 +68,12 @@
   box-shadow: #00000036 1px 1px 10px;
   margin-bottom: 100px;
   cursor: pointer;
+  transition: transform .4s ease;
+}
+
+.port-button:hover {
+  transform: translateY(-4px);
+  transition: all .4s ease;
 }
 
 .port-button a {
@@ -87,4 +97,109 @@
 .portifolio-projects-slide p {
   color: #5c5c5c;
   width: 55ch;
+}
+
+/* CONTACT */
+
+.contact {
+  background-image: linear-gradient(#d1d0d04e, #8d8d8d25), url('../imagens/istockphoto-1168080557-612x612.jpg');
+  overflow: hidden;
+}
+
+.contact-text {
+  text-align: center;
+  margin-top: 100px;
+}
+
+.contact h2 {
+  font-size: 40px;
+  letter-spacing: 3px;
+  color: #111111;
+}
+
+.contact-text h2::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 35px;
+  height: 5px;
+  border-radius: 10px;
+  left: 684px;
+  margin-top: 30px;
+  background-color: #FACF0F;
+}
+
+.contact-text p {
+  margin-top: 60px;
+  font-size: 20px;
+  color: #5c5c5c;
+  font-weight: 600;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  padding: 40px;
+  width: 700px;
+  background-color: #fff;
+  border-radius: 8px;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  box-shadow: #0000001c 1px 1px 10px;
+}
+
+.form input {
+  margin-bottom: 60px;
+  height: 50px;
+  border-radius: 5px;
+  border: none;
+  background-color: #F0F0F0;
+}
+
+textarea, input {
+  text-indent: 10px;
+}
+
+textarea, input:focus {
+  box-shadow: 0 0 0 0;
+  outline: none;
+}
+
+textarea, input::placeholder {
+  font-size: 14px;
+  font-weight: 600;
+  color: #9a9a9a;
+}
+
+.form textarea {
+  border-radius: 5px;
+  border: none;
+  background-color: #F0F0F0;
+  padding: 10px 0px;
+}
+ textarea::placeholder {
+  color: #9a9a9a;
+ }
+
+.form label {
+  margin-bottom: 10px;
+  font-size: 14px;
+  letter-spacing: 1px;
+  font-weight: bold;
+  color: #666;
+}
+
+.form button{
+  border: none;
+  background-color: #FACF0F;
+  width: 150px;
+  height: 50px;
+  border-radius: 5px;
+  box-shadow: #00000036 1px 1px 10px;
+  margin-left: 470px;
+  margin-top: 40px;
+  letter-spacing: 1px;
+  font-size: 16px;
+  font-weight: bold;
 }
