--- a/meu portifolio/CSS/project&Contact.css
+++ b/meu portifolio/CSS/project&Contact.css
@@ -203,4 +203,11 @@ textarea, input::placeholder {
   letter-spacing: 1px;
   font-size: 16px;
   font-weight: bold;
+  cursor: pointer;
+  transition: transform .4s ease;
+}
+
+.form button:hover {
+  transform: translateY(-4px);
+  transition: all .4s ease;
 }
