responsividade 800px em andamento

--- a/meu portifolio/CSS/contents.css
+++ b/meu portifolio/CSS/contents.css
@@ -8,7 +8,9 @@
   position: relative;
   top: 100px;
   text-align: center;
-  margin: 150px auto;
+  margin: 0 auto;
+  margin-top: 100px;
+  margin-bottom: 150px;
 }
 
 .home-text h2 {
