--- a/meu portifolio/CSS/responsivity.css
+++ b/meu portifolio/CSS/responsivity.css
@@ -458,4 +458,49 @@
       width: 100%;
       height: 600px;
     }
+    @media screen and (max-width: 600px) {
+      .home-text h2 {
+        flex-wrap: wrap;
+      }
+      .portifolio-projects img {
+        height: 550px;
+      }
+      .portifolio-projects-slide img {
+        height: 550px;
+      }
+      .portifolio-text p {
+        font-size: 14px;
+      }
+      .port-button {
+        width: 80px;
+      }
+      .port-button a {
+        font-size: 12px;
+      }
+      .form button {
+        margin: 50px auto;
+        width: 80px;
+        margin-bottom: -10px;
+      }
+      .footer-text h3{
+        font-size: 16px;
+      }
+      .footer-text p {
+        font-size: 12px;
+        width: 80%;
+      }
+      .social-media-footer h3 {
+        font-size: 16px;
+      }
+      .social-media-footer img {
+        width: 25px;
+      }
+      .Copyright {
+        margin-left: 26%;
+      }
+    }
+}
+
+@media screen and (max-width: 500px){
+  
 }
