responsividade em andamento

--- a/meu portifolio/CSS/responsivity.css
+++ b/meu portifolio/CSS/responsivity.css
@@ -1,10 +1,26 @@
 /* HEADER */
+@media screen and (max-width: 1100px) {
+  .logo-not-finish img {
+    width: 35px;
+    height: 40px;
+  }
+  .name-logo {
+    margin-left: 10px;
+  }
+}
 @media screen and (min-width: 800px){
   .menu-hamburguer {
     display: none;
   }
 }
 @media screen and (max-width: 800px){
+  .logo-not-finish img {
+    width: 35px;
+    height: 40px;
+  }
+  .name-logo {
+    margin-left: 50px;
+  }
   .links-container-mobile.disable {
     display: none;
   }
@@ -502,5 +518,48 @@
 }
 
 @media screen and (max-width: 500px){
-  
+  .home-text h2 {
+    width: 20ch;
+    margin-left: 17%;
+  }
+  .links-medias-content {
+    display: none;
+  }
+  .my-skills li {
+    font-size: 14px;
+  }
+  #design {
+    font-size: 14px;
+    width: 95%;
+  }
+ .form {
+  height: 600px;
+ }
+ .form label {
+  font-size: 12px;
+ }
+ input::placeholder {
+  font-size: 11px;
+ }
+ textarea::placeholder {
+  font-size: 11px;
+ }
+ .name-logo {
+  font-size: 14px;
+  margin-top: 6px;
+ }
+ .footer-grid {
+  grid-template-columns: 1fr;
+ }
+ .social-media-footer {
+  margin-top: 100px;
+  margin-right: -100px;
+ }
+ .effect-footer {
+  display: none;
+ }
+ .Copyright {
+  margin-top: 200px;
+  margin-left: 19%;
+ }
 }
