--- a/meu portifolio/CSS/header.css
+++ b/meu portifolio/CSS/header.css
@@ -13,9 +13,15 @@
 .logo-not-finish {
   content: "";
   background-color: #FACF0F;
-  width: 50px;
-  height: 50px;
+  width: 45px;
+  height: 45px;
   border-radius: 50%;
+  overflow: hidden;
+}
+
+.logo-not-finish img {
+  width: 45px;
+  height: 45px;
 }
 
 .name-logo {
@@ -24,7 +30,7 @@
   font-size: 18.5px;
   font-weight: bold;
   letter-spacing: .5px;
-  margin-left: 60px;
+  margin-left: 20px;
   color: #000;
 }
 
